--- a/web/package.json
+++ b/web/package.json
@@ -22,12 +22,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.3",
+    "@angular/cdk": "^20.2.7",
     "@angular/common": "^20.3.3",
     "@angular/compiler": "^20.3.3",
     "@angular/core": "^20.3.3",
     "@angular/forms": "^20.3.3",
     "@angular/platform-browser": "^20.3.3",
     "@angular/router": "^20.3.3",
+    "@nebular/eva-icons": "^16.0.0",
+    "@nebular/theme": "^16.0.0",
+    "bootstrap": "^4.6.2",
+    "eva-icons": "^1.1.3",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
