--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "@nebular/theme": "^16.0.0",
     "bootstrap": "^4.6.2",
     "eva-icons": "^1.1.3",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1"
   },
@@ -42,6 +43,7 @@
     "@angular/cli": "^20.3.4",
     "@angular/compiler-cli": "^20.3.3",
     "@types/jasmine": "~5.1.9",
+    "@types/lodash-es": "^4.17.12",
     "jasmine-core": "~5.11.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
